Fix: vertical alignment of modal content

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,3 +1,13 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding: 3rem;
+  box-sizing: border-box;
+}
+
 table {
   width: 100%;
   table-layout: fixed;
@@ -77,6 +87,13 @@ td {
 
 input[type="checkbox"]:hover {
   cursor: pointer;
+}
+
+.btn-container {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: end;
 }
 
 button {
