--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -4,7 +4,6 @@
   z-index: 100; /* Sit on top */
   padding-top: 1.25rem;
   left: 0;
-  top: 10%;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
@@ -16,7 +15,7 @@
 .modal-content {
   position: relative;
   background-color: #fefefe;
-  margin: auto;
+  margin: 5% auto;
   padding: 0;
   border: 1px solid #888;
   width: 80%;
